Fixed uneven buttons and overlapping judges container again!

--- a/css/_styles.scss
+++ b/css/_styles.scss
@@ -12,7 +12,7 @@ body {
         background-color: $primary;
         color: #0e0e15;
         cursor: pointer;
-       /* font-family: Helvetica, Arial, sans-serif; */
+        font-family: Helvetica, Arial, sans-serif;
         font-size: 14px;
         line-height: 50px;
         text-align: center;
@@ -31,7 +31,7 @@ body {
     }
     .w-button {
         @include breakpoint($min: 320px, $max: 640px) {
-            width: 100%;
+            width: 100% !important;
         }
     }
 }
@@ -63,7 +63,7 @@ body {
             justify-content: center;
             align-items: center;
             @include breakpoint($min: 320px, $max: 640px) {
-                width: 100%;
+                width: 100% !important;
             }
             .thumbnail {
                 background-color: $background-color;
@@ -119,7 +119,7 @@ body {
     .logos {
         padding: 30px;
         @include breakpoint($min: 320px, $max: 640px) {
-            padding: 0px;
+            padding: 0px !important;
         }
         div[class^="row-"] {
             width: 100%;
@@ -140,9 +140,9 @@ body {
             height: 80px;
             margin: 10px;
             @include breakpoint($min: 320px, $max: 640px) {
-                width: 40%;
-                flex-wrap: wrap;
-                height: 130px;
+                width: 39% !important;
+                flex-wrap: wrap !important;
+                height: 100px !important;
             }
         }
     }
